# pathward

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
pathward/: __init__.py  archive.py  errors.py  links.py  resolve.py
tests/: helpers.py  test_archive_tar.py  test_archive_zip.py  test_errors.py  test_links.py  test_resolve.py  test_safe_join.py  test_safe_open.py
