[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pathward"
version = "0.1.0"
description = "Defensive path handling for Python: guards against path traversal, symlink escape, Zip Slip, and TOCTOU races."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["security", "path-traversal", "zip-slip", "symlink", "toctou", "sandbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["pathward*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
